Point Separate Node causes position attribute to reset #86573

Closed
opened 2021-03-15 00:34:18 +01:00 by Erindale · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.72

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-13 22:49, hash: 1f8d27a191
Worked: (newest version of Blender that worked as expected)

Short description of error
When the Attribute Compare node compares against a value outside the range of the input attribute, the Point Separate node causes all the positions to be reset to (0,0,0).
Other attributes appear to be unaffected.

Exact steps for others to reproduce the error

image.png
image.png

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.72 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-13 22:49, hash: `1f8d27a191` Worked: (newest version of Blender that worked as expected) **Short description of error** When the Attribute Compare node compares against a value outside the range of the input attribute, the Point Separate node causes all the positions to be reset to (0,0,0). Other attributes appear to be unaffected. **Exact steps for others to reproduce the error** ![image.png](https://archive.blender.org/developer/F9891575/image.png) ![image.png](https://archive.blender.org/developer/F9891577/image.png)
Author

Added subscriber: @Erindale

Added subscriber: @Erindale

Added subscriber: @rajeshja

Added subscriber: @rajeshja

I was able to replicate this with master commit id 4ecd47de6b0d.

I was able to replicate this with `master` commit id `4ecd47de6b0d`.

Added subscriber: @randum

Added subscriber: @randum

When I use Point separate node with attribute created via Python API positions are also being reseted. Is it relevant to this issue or I have create another?

{F9894575, size=full}

When I use `Point separate` node with attribute created via Python API positions are also being reseted. Is it relevant to this issue or I have create another? {[F9894575](https://archive.blender.org/developer/F9894575/2021-03-16_13-20-52.png), size=full}
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Hans Goudey self-assigned this 2021-03-17 18:08:27 +01:00

This issue was referenced by 9b806c49d0

This issue was referenced by 9b806c49d08a323f70a1ca23dc219d072b05cc61
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86573
No description provided.